# Projects

./: Data Preparation Script Final.py  Final Assignment.R  Final.R  HOR and SEN Data Analysis Script.py  Hidden Markov Model Example .ipynb  Logistic Regression.ipynb  MO Dashboard Tool v2.ipynb  Neural Networks.ipynb  Plotting.py  README (Hidden Markov Model).md  README (Kaggle Logistic Regression).md  README(Neural Network).md  SIR.py  Topic Analysis.py  rshiny.R
Agentic MLOps/: .env.example  .gitignore  AGENTS.md  DECISIONS.md  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
Agentic MLOps/data/golden/: golden_v0_llm_placeholder.json
Agentic MLOps/prompts/: support_email_classifier_v1.yaml
Agentic MLOps/src/: __init__.py  classifier.py  models.py
Agentic MLOps/src/eval/: __init__.py  dataset.py  models.py
Agentic MLOps/src/llm/: __init__.py  client.py
Agentic MLOps/src/prompts/: __init__.py  loader.py  schema.py
Agentic MLOps/tests/: test_classifier.py  test_llm_client.py  test_placeholder_dataset.py  test_prompt_loader.py
Agentic MLOps/tests/eval/: test_dataset.py
Api/: cred.txt  main.py
Asyncio/: playground.py
Chatbot/: basic.py  chatbotwithmemory.py  chatbotwithtools.py
Chatbot-RAG/: main.py
CodeConverter/: .gitignore  agents.py  app.py  graph.py  main.py  output_structure.py  states.py  utils.py
Data Matching/: test.py
EmailAgent/: .gitignore  email_extractor.py  email_reader.py  email_responder.py  gmail.py  orchestration.py  requirements.txt  utils.py
Fastapi/: main.py  sample.json
GMM/: GMM.py
MCPtest_03/: server.py
(+82 files in other folders)
